CSV To Python Dict

--- a/Project/Parsing_JSON.ipynb
+++ b/Project/Parsing_JSON.ipynb
@@ -39094,6 +39094,9 @@
    ],
    "source": [
     "dict_from_csv = pd.read_csv('G:\\CMPT 409\\CMPT-409---Team-1\\Project\\high_diamond_ranked_10min.csv', header = None, index_col = 0, squeeze = True).to_dict()\n",
+    "\n",
+    "with open('dict.json','w') as fp:\n",
+    "    json.dump(dict_from_csv, fp)\n",
     "dict_from_csv"
    ]
   }
